--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 </ul>
             </div>
         </nav>
+        <div class="text-box">
+            <h1>World's Biggest University</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos qui voluptas architecto quos quo temporibus commodi. <br> Id, itaque rerum iusto unde quasi sunt ratione ipsum voluptate, molestiae exercitationem consequuntur veniam.</p>
+            <a href="" class="hero-btn">Visit Us to know more</a>
+        </div>
 
     </section>
 </body>
