Addition of About Page

--- a/index.html
+++ b/index.html
@@ -62,8 +62,121 @@
 
     </section>
 
+    <!-- Campus -->
+    <section class="campus">
+       <h1>Our Global Campus</h1>
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id adipisci numquam voluptatum facilis, quia nemo itaque impedit culpa fugit molestiae explicabo similique tempore. Rem ad deleniti iure neque omnis molestias.</p>
+       <div class="row">
+        <div class="campus-col">
+            <img src="images/london.png" >
+            <div class="layer">
+                <h3>LONDON</h3>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/newyork.png" >
+            <div class="layer">
+                <h3>NEW YORK</h3>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/washington.png" >
+            <div class="layer">
+                <h3>WASHINGTON</h3>
+            </div>
+        </div>
+       </div>
+    </section>
 
-    <section class="campus"></section>
+    <!-- Facilities -->
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic earum eos aliquid! Eveniet eligendi repellat est hic, harum facilis cupiditate maxime nisi quo officiis nostrum, fugit doloremque, ratione nihil architecto?</p>
+
+        <div class="row">
+            <div class="facilities-col">
+                <img src="images/library.png" >
+                <h3>Wold Class Library</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae mollitia molestias non vero, rerum quo corporis repudiandae in facere sit ab ex reprehenderit? Architecto ipsum tenetur officia ducimus consequatur.</p>
+
+            </div>
+            <div class="facilities-col">
+                <img src="images/basketball.png" >
+                <h3>Largest Play Ground</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae mollitia molestias non vero, rerum quo corporis repudiandae in facere sit ab ex reprehenderit? Architecto ipsum tenetur officia ducimus consequatur.</p>
+                
+            </div>
+            <div class="facilities-col">
+                <img src="images/cafeteria.png" >
+                <h3>Tasty and Healthy Food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae beatae mollitia molestias non vero, rerum quo corporis repudiandae in facere sit ab ex reprehenderit? Architecto ipsum tenetur officia ducimus consequatur.</p>
+                
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+        <h1>What our Students Say</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+        <div class="row">
+            <div class="testimonial-col">
+                <img src="images/user1.jpg" >
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, nemo unde ab possimus doloremque sint consectetur eligendi impedit in quidem, nisi a quasi. Ea quasi voluptatibus enim repellendus iure.
+                    </p>
+                    <h3>Edokpa Tegha</h3>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star"></i>
+
+
+                </div>
+            </div>
+            <div class="testimonial-col">
+                <img src="images/user2.jpg" >
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, nemo unde ab possimus doloremque sint consectetur eligendi impedit in quidem, nisi a quasi. Ea quasi voluptatibus enim repellendus iure.
+                    </p>
+                    <h3>Olasupo Gideon</h3>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- call to action -->
+
+    <section class="cta">
+        <h1>Enroll for our various online courses <br> Anywhere in the world</h1>
+        <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+
+
+    <!-- Footer -->
+
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quasi voluptatum doloribus commodi quis ab, temporibus a quisquam, perferendis est <br> dolore quaerat sequi. Veritatis adipisci facere quae tenetur quaerat! Recusandae?</p>
+        <div class="icons">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-whatsapp"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-linkedin"></i>
+        </div>
+        <p>Made With<i class="bi bi-balloon-heart"></i>Easy Tutorial</p>
+    </section>
 
 
 
