--- a/contact.html
+++ b/contact.html
@@ -27,22 +27,49 @@
             </div>
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
 
     </section>
 
 
-    <!-- about us content -->
+    <!-- Contact Us -->
+    <section class="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.0467728030735!2d3.3872697741321325!3d6.51576432325497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8d24c04d3e75%3A0x7347f1a6be13e004!2sUniversity%20of%20Lagos!5e0!3m2!1sen!2sng!4v1714670495185!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <section class="about-us">
+    </section>
+    <section class="contact-us">
         <div class="row">
-            <div class="about-col">
-                <h1>We are the world's largest university</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem atque repudiandae aliquid dicta numquam tenetur amet nostrum ipsam! Similique, sint repudiandae. Ut similique animi libero sapiente officiis illum distinctio vel?</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+            <div class="contact-col">
+                <div>
+                    <i class="bi bi-house-fill"></i>
+                    <span>
+                        <h5>XYZ Road, ABC Building</h5>
+                        <p>Akoka, Lagos, Nigeria</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="bi bi-telephone-fill"></i>
+                    <span>
+                        <h5>+234 8125979980</h5>
+                        <p>Monday to Saturday, 10AM to 6PM</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="bi bi-envelope-at-fill"></i>
+                    <span>
+                        <h5>info@gmail.com</h5>
+                        <p>Email Us your query</p>
+                    </span>
+                </div>
             </div>
-            <div class="about-col">
-                <img src="images/about.jpg" alt="">
+            <div class="contact-col">
+                <form action="form-handler.php" method="post">
+                    <input type="text" name="name" placeholder="Enter Your Name" required>
+                    <input type="email" name="email" placeholder="Enter Email Address" required>
+                    <input type="text" name="submit" placeholder="Enter Your Subject" required>
+                    <textarea  rows="8" name="message" placeholder="Message" required></textarea>
+                    <button type="submit" class="hero-btn red-btn" >Send Message</button>
+                </form>
             </div>
         </div>
     </section>
@@ -62,6 +89,8 @@
         </div>
         <p>Made With<i class="bi bi-balloon-heart"></i>Easy Tutorial</p>
     </section>
+
+    
 
 
 
