--- a/course.html
+++ b/course.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="images/logo.png" ></a>
             <div class="nav-links" id="navLinks">
@@ -27,16 +27,14 @@
             </div>
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos qui voluptas architecto quos quo temporibus commodi. <br> Id, itaque rerum iusto unde quasi sunt ratione ipsum voluptate, molestiae exercitationem consequuntur veniam.</p>
-            <a href="" class="hero-btn">Visit Us to know more</a>
-        </div>
+        <h1>Our Courses</h1>
 
     </section>
 
 
     <!-- course -->
+
+
     <section class="course">
         <h1>Courses We Offer</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nesciunt natus dolor dicta voluptate laudantium minima, inventore dignissimos, possimus similique quidem eligendi ipsum facilis nostrum alias placeat qui quam et.</p>
@@ -62,33 +60,10 @@
 
     </section>
 
-    <!-- Campus -->
-    <section class="campus">
-       <h1>Our Global Campus</h1>
-       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id adipisci numquam voluptatum facilis, quia nemo itaque impedit culpa fugit molestiae explicabo similique tempore. Rem ad deleniti iure neque omnis molestias.</p>
-       <div class="row">
-        <div class="campus-col">
-            <img src="images/london.png" >
-            <div class="layer">
-                <h3>LONDON</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/newyork.png" >
-            <div class="layer">
-                <h3>NEW YORK</h3>
-            </div>
-        </div>
-        <div class="campus-col">
-            <img src="images/washington.png" >
-            <div class="layer">
-                <h3>WASHINGTON</h3>
-            </div>
-        </div>
-       </div>
-    </section>
 
-    <!-- Facilities -->
+    <!-- facilities -->
+
+
     <section class="facilities">
         <h1>Our Facilities</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic earum eos aliquid! Eveniet eligendi repellat est hic, harum facilis cupiditate maxime nisi quo officiis nostrum, fugit doloremque, ratione nihil architecto?</p>
@@ -116,54 +91,10 @@
     </section>
 
 
-    <!-- Testimonials -->
-    <section class="testimonials">
-        <h1>What our Students Say</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="images/user1.jpg" >
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, nemo unde ab possimus doloremque sint consectetur eligendi impedit in quidem, nisi a quasi. Ea quasi voluptatibus enim repellendus iure.
-                    </p>
-                    <h3>Edokpa Tegha</h3>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
+    
 
 
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <img src="images/user2.jpg" >
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, nemo unde ab possimus doloremque sint consectetur eligendi impedit in quidem, nisi a quasi. Ea quasi voluptatibus enim repellendus iure.
-                    </p>
-                    <h3>Olasupo Gideon</h3>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-half"></i>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- call to action -->
-
-    <section class="cta">
-        <h1>Enroll for our various online courses <br> Anywhere in the world</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
-    </section>
-
-
-    <!-- Footer -->
+<!-- footer -->
 
     <section class="footer">
         <h4>About Us</h4>
