--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png" ></a>
+            <a href="index.html"><img src="images/unilag logo.png" ></a>
             <div class="nav-links" id="navLinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a>
+                        <ul class="dropdown">
+                            <li><a href="abouthistory.html">History</a></li>
+                            <!-- <li><a href="#">Leadership and Organogram</a></li> -->
+                            <li><a href="#">Vacancies</a></li>
+                            <li><a href="#">Our Awards</a></li>
+                            <!-- <li><a href="#">Vice Chancellor's Vision</a></li> -->
+                        </ul>
+                    </li>
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -28,9 +36,10 @@
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos qui voluptas architecto quos quo temporibus commodi. <br> Id, itaque rerum iusto unde quasi sunt ratione ipsum voluptate, molestiae exercitationem consequuntur veniam.</p>
-            <a href="" class="hero-btn">Visit Us to know more</a>
+            <h1>University of Lagos</h1>
+            <p>A domain of knowledge and legacy of excellence, instrumental in
+                the production of academia with tremendous impact in Nigeria.</p>
+            <a href="https://unilag.edu.ng/" class="hero-btn">Visit Us to know more</a>
         </div>
 
     </section>
@@ -175,7 +184,7 @@
             <i class="bi bi-instagram"></i>
             <i class="bi bi-linkedin"></i>
         </div>
-        <p>Made With<i class="bi bi-balloon-heart"></i>Easy Tutorial</p>
+        <p>Made With<i class="bi bi-balloon-heart"></i>Louis Code</p>
     </section>
 
 
