--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,20 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/logo.png" ></a>
+            <a href="index.html"><img src="images/unilag logo.png" ></a>
             <div class="nav-links" id="navLinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a>
+                        <ul class="dropdown">
+                            <li><a href="abouthistory.html">History</a></li>
+                            <!-- <li><a href="#">Leadership and Organogram</a></li> -->
+                            <li><a href="#">Vacancies</a></li>
+                            <li><a href="#">Our Awards</a></li>
+                            <!-- <li><a href="#">Vice Chancellor's Vision</a></li> -->
+                        </ul>
+                    </li>
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
