Addition of history in the about us page

--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a>
+                    <li><a href="abouthistory.html">ABOUT</a>
                         <ul class="dropdown">
                             <li><a href="abouthistory.html">History</a></li>
                             <!-- <li><a href="#">Leadership and Organogram</a></li> -->
                             <li><a href="#">Vacancies</a></li>
-                            <li><a href="#">Our Awards</a></li>
+                            <li><a href="aboutawards.html">Our Awards</a></li>
                             <!-- <li><a href="#">Vice Chancellor's Vision</a></li> -->
                         </ul>
                     </li>
@@ -45,7 +45,7 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <h1>History</h1>
+                <h1><a href="abouthistory.html">History</a></h1>
                 <p>Founded in 1962, the University of Lagos has, for over 5 decades, provided qualitative and research-oriented education to Nigerians and all those who have entered its domain in search of knowledge. At its inception, the University of Lagos was empowered to produce a professional workforce that would steer the political, social and economic development of a newly independent country. Over the last fifty years the University has pursued this mission with vigour, excellence and panache. The University has built a legacy of academic excellence and is now acclaimed publicly as “the University of First Choice and the Nation’s Pride.”</p>
                 
                 
