--- a/abouthistory.html
+++ b/abouthistory.html
@@ -35,7 +35,7 @@
             </div>
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
-        <h1>History</h1>
+        <h1>About Us</h1>
 
     </section>
 
@@ -45,7 +45,7 @@
     <section class="about-us">
         <div class="row">
             <div class="about-col">
-                <!-- <h1>History</h1> -->
+                <h1>History</h1>
                 <p>Founded in 1962, the University of Lagos has, for over 5 decades, provided qualitative and research-oriented education to Nigerians and all those who have entered its domain in search of knowledge. At its inception, the University of Lagos was empowered to produce a professional workforce that would steer the political, social and economic development of a newly independent country. Over the last fifty years the University has pursued this mission with vigour, excellence and panache. The University has built a legacy of academic excellence and is now acclaimed publicly as “the University of First Choice and the Nation’s Pride.”</p>
                 <p>The establishment of the University of Lagos in 1962 was informed by the need to intensify the training of a professional workforce for a newly independent Nigeria in search of rapid industrialisation and economic development. It was however quite evident that the country lacked the requisite workforce to actualise the people’s dream. There was a big gulf to be filled, and that required establishing many more universities.
                     Towards this end, the Federal Government established the Eric Ashby Commission on Post School Certificate and Higher Education in Nigeria in May 1959. The Ashby Commission’s report, titled Investment in Education, recommended the establishment of a new university in Lagos, the then Federal Capital, to offer day and evening courses in Commerce, Business Administration, Economics and Higher Management Studies. In 1961, the Federal Government assigned the detailed planning of the new university to a UNESCO Advisory Commission. However, whereas the Ashby Commission had envisaged a non-residential institution which would be cited in the business district of Central Lagos, the UNESCO Commission opted for a traditional university, “a complete all encompassing institution” with residential accommodation on a large campus. Following the acceptance of the UNESCO Commission’s report, the University of Lagos was established on 22nd October 1962 on the authority of the University of Lagos Act of 1962.
@@ -66,8 +66,10 @@
         <p>The University began with three faculties: Commerce and Business Administration, Law and Medicine. At its first meeting the Board of the Faculty of Commerce and Business Administration changed the name to the Faculty of Business and Social Studies. The faculties of Arts, Education, Engineering and Science were added in 1964.</p>
         <p>For the first academic session, 1962/1963, the University admitted 46 students for the Faculty of Commerce and Business Administration and 26 for the Faculty of Law. These students received their first lectures on 22 October 1962 at the temporary site in a secondary school at Idi-Araba, adjacent to the Medical School and the Teaching Hospital. 28 medical students had already commenced lectures three weeks earlier on 3 October, 1962. The University moved from its temporary location in Idi-Araba to the Akoka main campus in September 1965. The direction of the University’s future development was consolidated with the promulgation of the University of Lagos Decree in 1967 (Decree No. 3 of 1967). The new constitution created an integrated and more structurally coherent institution by establishing a single Council for the whole university. The previous arrangement had two separate Councils, one for the University and the other for the Medical School.</p>
     </div>
-        <div class="imm">
+        <div class="row">
+          <div class="about-col">
             <img src="images/DeptHistory1.jpg" alt="">
+          </div>  
         </div>
         <p>
             With the new Act the Medical School ceased to exist as a separate institution and became an integral part of the University of Lagos subject to the full authority of Senate. However, to ensure a measure of autonomy necessary for the smooth discharge of the responsibilities of some specialised units the university adopted the collegiate system under which the Medical School now became the College of Medicine of the University of Lagos. The Faculty of Business and Social Studies was divided into the School of Administration and the School of Social Studies. The Federal Advanced Teachers’ College was integrated into the university as the College of Education. The Institute of Computer Sciences and the Institute of Mass Communication were founded in 1967 and became teaching units a year later. The Institute of Child Health joined the University in 1969.
@@ -90,7 +92,11 @@
             <li>Science</li>
             <li>Social Sciences</li>
         </ul>
-        <img src="images/DeptHistory2.jpg" alt="">
+        <div class="row">
+            <div class="about-col">
+               <img src="images/DeptHistory2.jpg" alt="">
+            </div>
+        </div>
         <h2>Physical Growth and Expansion</h2>
         <p>The first phase of infrastructural development at the main (Akoka) campus was completed in 1965. It consisted of two academic areas called Academic Group North and Academic Group South, the Dinning Hall, Library, Administrative Block, the Central Concourse, staff quarters and students’ hostels. Subsequent developments have added academic buildings including those of Arts, Advanced Legal Studies, Chemical Engineering, Mass Communication, and Science; service facilities such as the Auditorium, the Conference Centre and Guest Houses, the Health Centre, the Sports Centre, the Unilag Consult Complex, a walkway linking the Faculty of Science with the Faculty of Engineering, a massive water reservoir near the Department of Mass Communication; boreholes in the service area of the main campus; Junior Staff quarters, Phase I, along Lawani Road, off University Road, Abule-Oja; and additional hostels for male and female students.</p>
         <p>The Hydraulic Research Laboratory was also constructed with a grant from the Government of the Netherlands and a donation of N30,000.00 from the Nigerian Ports Authority. The University of Lagos International School was established in 1981. It relocated to its permanent site in October 1985. The Senate House Complex was completed in 1984. The University also established autonomous commercial outfits as a means to generating additional revenue. Foremost among these are Unilag Consult and Unilag Ventures.
