--- a/course.html
+++ b/course.html
@@ -19,7 +19,7 @@
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a>
+                    <li><a href="abouthistory.html">ABOUT</a>
                         <ul class="dropdown">
                             <li><a href="abouthistory.html">History</a></li>
                             <!-- <li><a href="#">Leadership and Organogram</a></li> -->
