updated at at 8th May 2024

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/unilag logo.png" ></a>
+            <a href="index.html"><img src="images/ulogo.png" ></a>
             <div class="nav-links" id="navLinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
