--- a/abouthistory.html
+++ b/abouthistory.html
@@ -14,7 +14,7 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="images/unilag logo.png" ></a>
+            <a href="index.html"><img src="images/ulogo.png" ></a>
             <div class="nav-links" id="navLinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
